--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
                                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                         <li class="nav-item"><a class="nav-link" href="https://n2ref.github.io/coreui-panel">Panel</a></li>
                                         <li class="nav-item"><a class="nav-link" href="https://n2ref.github.io/coreui-form">Form</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="https://n2ref.github.io/coreui-tabs">Tabs</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="https://n2ref.github.io/coreui-layout">Layout</a></li>
                                         <li class="nav-item"><a class="nav-link" href="https://n2ref.github.io/coreui-table">Table</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="https://n2ref.github.io/coreui-layout">Layout</a></li>
                                         <li class="nav-item"><a class="nav-link" href="https://n2ref.github.io/coreui-info">Info</a></li>
                                         <li class="nav-item"><a class="nav-link" href="https://n2ref.github.io/coreui-modal">Modal</a></li>
                                         <li class="nav-item"><span class="nav-link active">Notice</span></li>
@@ -54,7 +53,7 @@
                     <div id="docs-sidenav" class="hidden-xs hidden-sm hidden-md d-none d-lg-block"
                          data-bs-spy="affix" data-bs-offset-top="90" data-bs-offset-bottom="70">
                         <ul class="nav">
-                            <li><a href="#download">Download</a></li>
+                            <li><a href="#get-started">Get started</a></li>
                             <li>
                                 <a href="#examples">Examples</a>
                                 <ul class="nav">
@@ -71,30 +70,34 @@
                     </div>
                 </div>
                 <div class="col-lg-10">
-                    <h2 id="download">Download</h2>
-                    <div>
+                    <div id="get-started">
+                        <h2 class="mb-4">Get started</h2>
+
+                        <div id="download">
+                            <h4>Download</h4>
+                            <p>
+                                You can download a minimized version of the library or get the full source code at github.com.
+                            </p>
+                            <a class="btn btn-secondary" href="https://github.com/n2ref/coreui-notice/archive/master.zip">Download source</a>
+                        </div>
+
+
+                        <h4 class="section-margin">Install with npm</h4>
+                        <pre><code class="bash">$ npm install coreui-notice</code></pre>
+
+
+                        <h4 class="section-margin">Требования</h4>
                         <p>
-                            You can download a minimized version of the library or get the full source code at github.com.
-                        </p>
-                        <a class="btn btn-secondary" href="https://github.com/n2ref/coreui-notice/archive/master.zip">Download source</a>
+                            Для корректной работы на странице необходимо наличие:
+                            <a href="https://jquery.com" target="_blank">jquery</a>
+                    </p>
                     </div>
 
+                    <div id="examples">
+                        <h2 class="section-margin mb-4">Examples</h2>
 
-                    <h2 class="section-margin">Install with npm</h2>
-                    <pre><code class="bash">$ npm install coreui-notice</code></pre>
-
-
-                    <h2 class="section-margin">Требования</h2>
-                    <p>
-                        Для корректной работы на странице необходимо наличие:
-                        <a href="https://jquery.com" target="_blank">jquery</a>
-                    </p>
-
-
-                    <h2 id="examples" class="section-margin">Examples</h2>
-                    <div>
-                        <h3 id="example-simple">Simple notice</h3>
-                        <div>
+                        <div id="example-simple" class="mb-4">
+                            <h4>Simple notice</h4>
                             <div class="content-example">
                                 <button class="btn btn-sm btn-secondary" id="notice-default">Default</button>
                                 <button class="btn btn-sm btn-warning" id="notice-warning">Warning</button>
@@ -146,11 +149,10 @@
                                 </code></pre>
                             </div>
                         </div>
-                        <br><br>
 
 
-                        <h3 id="example-positions-options">Positions</h3>
-                        <div>
+                        <div id="example-positions-options" class="mb-4">
+                            <h3>Positions</h3>
                             <div class="content-example">
                                 <button class="btn btn-sm btn-secondary" id="notice-position-top-left">Top left</button>
                                 <button class="btn btn-sm btn-secondary" id="notice-position-top-center">Top center</button>
@@ -191,11 +193,10 @@
                                 </code></pre>
                             </div>
                         </div>
-                        <br><br>
 
 
-                        <h3 id="example-styles-options">Styles</h3>
-                        <div>
+                        <div id="example-styles-options" class="mb-4">
+                            <h3>Styles</h3>
                             <div class="content-example">
                                 <button class="btn btn-sm btn-secondary" id="notice-custom-colors">Custom colors</button>
                                 <button class="btn btn-sm btn-secondary" id="notice-icon-info"><i class="bi bi-info"></i> Icon</button>
@@ -229,11 +230,10 @@
                                 </code></pre>
                             </div>
                         </div>
-                        <br><br>
 
 
-                        <h3 id="example-actions">Actions</h3>
-                        <div>
+                        <div id="example-actions" class="mb-4">
+                            <h3>Actions</h3>
                             <div class="content-example">
                                 <button class="btn btn-sm btn-secondary" id="notice-actions-btn">Action button</button>
                                 <button class="btn btn-sm btn-secondary" id="notice-actions-timer">Timer</button>
@@ -283,13 +283,11 @@
                                 </code></pre>
                             </div>
                         </div>
-                        <br><br>
-
                     </div>
 
 
-                    <h2 id="options" class="section-margin">Options</h2>
-                    <div class="table-responsive">
+                    <div id="options" class="table-responsive">
+                        <h2 class="section-margin">Options</h2>
                         <table class="table table-bordered table-striped js-options-table">
                             <thead>
                             <tr>
@@ -341,8 +339,8 @@
                     </div>
 
 
-                    <h2 id="methods" class="section-margin">Methods</h2>
-                    <div class="table-responsive">
+                    <div id="methods" class="table-responsive">
+                        <h2 class="section-margin">Methods</h2>
                         <table class="table table-bordered table-striped js-options-table">
                             <thead>
                             <tr>
@@ -405,97 +403,100 @@
                     </div>
 
 
-                    <h2 id="settings" class="section-margin">Settings</h2>
-                    <p>Настройки контейнера</p>
-                    <div class="table-responsive">
-                        <table class="table table-bordered table-striped js-options-table">
-                            <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>type</th>
-                                <th>default</th>
-                                <th>description</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <th>limit</th> <td>number</td> <td>3</td>
-                                <td>Максимальное одновременное количество сообщений</td>
-                            </tr>
-                            <tr>
-                                <th>top</th> <td>number</td> <td>50</td>
-                                <td>Отступ в пикселях от верха страницы</td>
-                            </tr>
-                            <tr>
-                                <th>bottom</th> <td>number</td> <td>50</td>
-                                <td>Отступ в пикселях от низа страницы</td>
-                            </tr>
-                            <tr>
-                                <th>position</th> <td>string</td> <td>top-left</td>
-                                <td>Положение сообщения на странице. Доступные варианты: <code>top-left, top-center, top-right, bottom-left, bottom-center, bottom-right</code></td>
-                            </tr>
-                            <tr>
-                                <th>container</th> <td>string</td> <td>body</td>
-                                <td>Контейнер для создания уведомлений</td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                    <div id="settings" class="table-responsive">
+                        <h2 class="section-margin">Settings</h2>
+                        <div class="mb-5">
+                            <p>Настройки контейнера</p>
 
-                    <p>Настройки уведомления</p>
-                    <div class="table-responsive">
-                        <table class="table table-bordered table-striped js-options-table">
-                            <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>type</th>
-                                <th>default</th>
-                                <th>description</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <th>id</th> <td>string</td> <td></td>
-                                <td>Идентификатор уведомления</td>
-                            </tr>
-                            <tr>
-                                <th>type</th> <td>string</td> <td>default</td>
-                                <td>Вид уведомления</td>
-                            </tr>
-                            <tr>
-                                <th>timeout</th> <td>number</td> <td>6000</td>
-                                <td>Количество миллисекунд до закрытия уведомления</td>
-                            </tr>
-                            <tr>
-                                <th>message</th> <td>string</td> <td></td>
-                                <td>Текст уведомления</td>
-                            </tr>
-                            <tr>
-                                <th>textColor</th> <td>string</td> <td></td>
-                                <td>Цвет текста уведомления</td>
-                            </tr>
-                            <tr>
-                                <th>bgColor</th> <td>string</td> <td></td>
-                                <td>Цвет фона уведомления</td>
-                            </tr>
-                            <tr>
-                                <th>icon</th> <td>string</td> <td></td>
-                                <td>css класс для отображения иконки</td>
-                            </tr>
-                            <tr>
-                                <th>showClose</th> <td>bool</td> <td>true</td>
-                                <td>Признак отображения иконки закрытия</td>
-                            </tr>
-                            <tr>
-                                <th>buttons</th> <td>array</td> <td></td>
-                                <td>Кнопки которые необходимо отобразить в уведомлении</td>
-                            </tr>
-                            <tr>
-                                <th>onClose</th> <td>function</td> <td></td>
-                                <td>Событие происходящее в момент закрытия</td>
-                            </tr>
-                            </tbody>
-                        </table>
+                            <table class="table table-bordered table-striped js-options-table">
+                                <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>type</th>
+                                    <th>default</th>
+                                    <th>description</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <th>limit</th> <td>number</td> <td>3</td>
+                                    <td>Максимальное одновременное количество сообщений</td>
+                                </tr>
+                                <tr>
+                                    <th>top</th> <td>number</td> <td>50</td>
+                                    <td>Отступ в пикселях от верха страницы</td>
+                                </tr>
+                                <tr>
+                                    <th>bottom</th> <td>number</td> <td>50</td>
+                                    <td>Отступ в пикселях от низа страницы</td>
+                                </tr>
+                                <tr>
+                                    <th>position</th> <td>string</td> <td>top-left</td>
+                                    <td>Положение сообщения на странице. Доступные варианты: <code>top-left, top-center, top-right, bottom-left, bottom-center, bottom-right</code></td>
+                                </tr>
+                                <tr>
+                                    <th>container</th> <td>string</td> <td>body</td>
+                                    <td>Контейнер для создания уведомлений</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div class="table-responsive">
+                            <p>Настройки уведомления</p>
+                            <table class="table table-bordered table-striped js-options-table">
+                                <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>type</th>
+                                    <th>default</th>
+                                    <th>description</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <th>id</th> <td>string</td> <td></td>
+                                    <td>Идентификатор уведомления</td>
+                                </tr>
+                                <tr>
+                                    <th>type</th> <td>string</td> <td>default</td>
+                                    <td>Вид уведомления</td>
+                                </tr>
+                                <tr>
+                                    <th>timeout</th> <td>number</td> <td>6000</td>
+                                    <td>Количество миллисекунд до закрытия уведомления</td>
+                                </tr>
+                                <tr>
+                                    <th>message</th> <td>string</td> <td></td>
+                                    <td>Текст уведомления</td>
+                                </tr>
+                                <tr>
+                                    <th>textColor</th> <td>string</td> <td></td>
+                                    <td>Цвет текста уведомления</td>
+                                </tr>
+                                <tr>
+                                    <th>bgColor</th> <td>string</td> <td></td>
+                                    <td>Цвет фона уведомления</td>
+                                </tr>
+                                <tr>
+                                    <th>icon</th> <td>string</td> <td></td>
+                                    <td>css класс для отображения иконки</td>
+                                </tr>
+                                <tr>
+                                    <th>showClose</th> <td>bool</td> <td>true</td>
+                                    <td>Признак отображения иконки закрытия</td>
+                                </tr>
+                                <tr>
+                                    <th>buttons</th> <td>array</td> <td></td>
+                                    <td>Кнопки которые необходимо отобразить в уведомлении</td>
+                                </tr>
+                                <tr>
+                                    <th>onClose</th> <td>function</td> <td></td>
+                                    <td>Событие происходящее в момент закрытия</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
